--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <li class="one_third">
         <article><a href="#"><i class="fas fa-hourglass-half"></i></a>
           <h6 class="heading">Sociis natoque penatibus</h6>
-          <p>Interdum at congue semper purus nullam quis odio id justo accumsan ullamcorper maecenas vel arcu nulla tincidunt elit ornare.</p>
+          <p>jafsdjk;asld fdsal dsa;ljf;la dfs;l fsda;lj fd;l jdlsjl;kdfsa ;fsda fdsl;ajfdslajfdsa  l;sfad fd;lj fdsa;ljfds ;la jfds;l jfdslpkdf;lj dsl;fds;la jfds;ljfdsl;a jfds;l fdljfds;la  sdfaInterdum at congue semper purus nullam quis odio id justo accumsan ullamcorper maecenas vel arcu nulla tincidunt elit ornare.</p>
         </article>
       </li>
       <li class="one_third">
